# raytracing

./: .clippy.toml  .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  README.md  clippy.toml  codecov.yml  index.html  package.json  rust-toolchain.toml  rustfmt.toml  tsconfig.json
.zed/: debug.json  settings.json
assets/: 08.ppm  09.ppm  10.ppm  11.ppm  13.ppm  15a.ppm  16.ppm  18.ppm  19.ppm  20.ppm
crates/book1/: Cargo.toml  README.md
crates/book1/assets/: 04.ppm  11.ppm  12.ppm  14.ppm  15.ppm  15b.ppm  15c.ppm  15d.ppm  15e.ppm  17.ppm  21.ppm  22.ppm
crates/book2/: Cargo.toml  README.md
crates/book3/: Cargo.toml  README.md
crates/compare/: Cargo.toml
crates/compare/src/: lib.rs
crates/core/: Cargo.toml
crates/core/examples/: 01.rs  01.txt  02.rs  02.txt  03.rs  03.txt  04.rs  04.txt  05.rs  05.txt  06.rs  06.txt  07.rs  07.txt  08.rs  08.txt  09.rs  09.txt  10.rs  10.txt  11.txt  12.txt  17.rs  17.txt  18.rs  18.txt  19.rs  19.txt  20.txt  21.txt  22.rs  23.rs
crates/core/src/: aabb.rs  axis.rs  camera.rs  cmp.rs  color.rs  geometry.rs  hittable.rs  interval.rs  lib.rs  material.rs  prelude.rs  ray.rs  sphere.rs
crates/core/src/objects/: hit_record.rs  mod.rs  sphere.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
src/: color.rs  get-element.ts  lib.rs  main.css  main.rs  main.ts  prelude.rs  vector.rs
src/math/: mod.rs
src/primitives/: color.rs  mod.rs  vector.rs
styles/: main.css
